--- a/src/main/resources/templates/auth/register.html
+++ b/src/main/resources/templates/auth/register.html
@@ -1,4 +1,4 @@
-<div th:include="/layout/component/header"></div>
+<div th:include="/fragments/user/header"></div>
 <title>Đăng ký</title>
 <div class="container"><br>
     <div class="login">
@@ -51,4 +51,4 @@
     <a style="color:blue;text-decoration:underline;font-size:18px;line-height:24px"
        href="/user/auth/forgot-password">Quên mật khẩu</a><br>
 </div>
-<div th:include="/layout/component/footer"></div>
+<div th:include="/fragments/user/footer"></div>
