--- a/src/main/resources/templates/admin/auth/login.html
+++ b/src/main/resources/templates/admin/auth/login.html
@@ -37,14 +37,16 @@
     <div class="login-box-body">
         <p class="login-box-msg">Sign in to start your session</p>
         <div th:if="${message}" class="alert alert-danger text-center mt-3">[[${message}]]</div>
-        <form  th:action="@{'/admin/auth/checklogin'}" th:object="${loginDto}" method="post">
+        <form th:action="@{'/admin-auth/checklogin'}" method="post" th:object="${loginDto}">
             <div class="form-group has-feedback">
-                <input type="email" th:field="*{email}" class="form-control" value="admin@gmail.com" placeholder="Email">
+                <input type="email" class="form-control" placeholder="Email" th:field="*{email}">
                 <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+                <p th:if="${#fields.hasErrors('email')}" class="text-danger" th:errors="*{email}"></p>
             </div>
             <div class="form-group has-feedback">
-                <input type="password" th:field="*{password}" class="form-control" value="123456789" placeholder="Password">
+                <input type="password" class="form-control" placeholder="Password" th:field="*{password}">
                 <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+                <p th:if="${#fields.hasErrors('password')}" class="text-danger" th:errors="*{password}"></p>
             </div>
             <div class="row">
                 <div class="col-xs-8">
