--- a/src/main/resources/templates/fragments/user/header.html
+++ b/src/main/resources/templates/fragments/user/header.html
@@ -80,10 +80,14 @@
         </form>
         <ul class="menuRight dnTablet-l" th:if="${#request.userPrincipal}">
             <li><a href="{{ route('get.user.orders', ['status' => 0]) }}" title="Home">Đơn hàng</a></li>
-            <li><a href="{{ route('get.user.index')}}">[[${user.name}]]</a></li>
+            <li>
+                <a th:href="@{'/profile'}">
+                    [[${@commonConfigurations.getCurrentUser.getName()}]]
+                </a>
+            </li>
             <li><a th:href="@{'/user/auth/logout'}">Đăng xuất</a></li>
         </ul>
-        <ul class="menuRight dnTablet-l" th:else>
+        <ul class="menuRight dnTablet-l" th:if="!${#request.userPrincipal}">
             <li><a th:href="@{'/user/auth/login'}">Đăng nhập</a></li>
             <li><a th:href="@{'/user/auth/register'}">Đăng ký</a></li>
         </ul>
@@ -103,7 +107,7 @@
                             <div class="subMenu" style="width: 250px;">
                                 <div class="group">
                                     <div class="item" th:each="category: ${categories}" th:if="${category.c_cate == 'watch'}">
-                                        <a th:href="@{'/danh-muc/' + ${category.c_slug}}">[[${category.c_name}]]</a>
+                                        <a th:href="@{'/product/category/' + ${category.c_slug}}">[[${category.c_name}]]</a>
                                     </div>
                                 </div>
                             </div>
@@ -118,7 +122,7 @@
                                 <div class="group">
                                     <div class="item">
                                         <div class="item" th:each="category: ${categories}" th:if="${category.c_cate == 'glass'}">
-                                            <a th:href="@{'/danh-muc/' + ${category.c_slug}}">[[${category.c_name}]]</a>
+                                            <a th:href="@{'/product/category/' + ${category.c_slug}}">[[${category.c_name}]]</a>
                                         </div>
                                     </div>
                                 </div>
@@ -134,7 +138,7 @@
                                 <div class="group">
                                     <div class="item">
                                         <div class="item" th:each="category: ${categories}" th:if="${category.c_cate == 'accessories'}">
-                                            <a th:href="@{'/danh-muc/' + ${category.c_slug}}">[[${category.c_name}]]</a>
+                                            <a th:href="@{'/product/category/' + ${category.c_slug}}">[[${category.c_name}]]</a>
                                         </div>
                                     </div>
                                 </div>
