--- a/src/main/resources/templates/fragments/user/footer.html
+++ b/src/main/resources/templates/fragments/user/footer.html
@@ -77,6 +77,7 @@
 <script th:src="@{/view/js/Lightbox/lightbox.min.js}"></script>
 <script th:src="@{/view/js/slick/slick.js}"></script>
 <script th:src="@{/view/js/Common.js}"></script>
+<script th:src="@{/view/js/script.js}"></script>
 <script th:src="@{/toastr/toastr.min.js}"></script>
 <script>
     if (typeof TYPE_MESSAGE != "undefined") {
