--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -6,7 +6,7 @@
         <div class="breadcrumb"><a>Thông tin cá nhân</a></div>
         <div id="container" class="container">
             <div class="my-profile">
-                <img class="profile-user-img img-responsive img-circle" th:src="${@commonConfigurations.getCurrentUser.getAvatar()}" style="width:100px;height:100px;border-radius: 50%;" alt="User profile picture">
+                <img class="profile-user-img img-responsive img-circle" th:src="${@commonConfigurations.getCurrentUser.getAvatar()}" alt="User profile picture">
                 <div class="my-profile-bd">
                     <div class="my-profile-item" style="margin-top: 10px">
                         <h3 class="my-profile-item-title">Họ tên</h3>
